// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled Input 1`] = `
<div
  className="mt-4"
>
  <label
    className="block mb-2 text-sm font-medium text-gray-600 dark:text-gray-200"
    htmlFor="Test Name"
  >
    Test Name
  </label>
  <input
    className="block w-full px-4 py-2 text-gray-700 bg-white border rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-400 focus:ring-opacity-40 dark:focus:border-blue-300 focus:outline-none focus:ring focus:ring-blue-300 disabled:bg-slate-200"
    disabled={true}
    id="Test Name"
    onChange={[Function]}
    value="Test Value"
  />
</div>
`;

exports[`Input 1`] = `
<div
  className="mt-4"
>
  <label
    className="block mb-2 text-sm font-medium text-gray-600 dark:text-gray-200"
    htmlFor="Test Name"
  >
    Test Name
  </label>
  <input
    className="block w-full px-4 py-2 text-gray-700 bg-white border rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-400 focus:ring-opacity-40 dark:focus:border-blue-300 focus:outline-none focus:ring focus:ring-blue-300 disabled:bg-slate-200"
    id="Test Name"
    onChange={[Function]}
    value="Test Value"
  />
</div>
`;
